<resources>
    <string name="app_name">T3x</string>

    <!-- Strings related to login or register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_number">Phone number</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_login">SE CONNECTER</string>
    <string name="action_cancel">ANNULER</string>
    <string name="tv_register">Register here</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu">Menu</string>


    <string name="drawer_header_text">Drawer Header</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_profil">Profile</string>
    <string name="nav_item_historic">Historicals</string>
    <string name="nav_sub_menu_about">About</string>
    <string name="nav_item_logout">Logout</string>
    <string name="nav_item_mode">Driver mode</string>
    <string name="nav_sub_menu">Informations</string>



    <string name="action_example">Example action</string>
    <string name="title_activity_profil">ProfilActivity</string>

    <string name="tv_firstname">First name :  </string>
    <string name="tv_lastname">Last name :  </string>
    <string name="tv_username">Username :  </string>
    <string name="tv_email">Email :  </string>
    <string name="tv_id">ID :  </string>
    <string name="tv_number">Phone number :  </string>
    <string name="bt_edit">Validate</string>

    <string name="snack_msg_arrivee">Indicate the end point</string>
    <string name="snack_msg">Order ?</string>
    <string name="snack_bt"> Accept</string>
    <string name="snack_dr_msg"> Accept ?</string>
    <string name="snack_dr_msg1"> Yes </string>
    <string name="snack_order_send"> Order send</string>
    <string name="msg_dr_custom"> Is the customer in the car ?</string>
    <string name="msg_dr_maj">Refresh data...</string>
    <string name="msg_res_dr"> Research of driver ... Wait!!</string>
    <string name="msg_res_can"> Cancel</string>
    <string name="msg_dr_find"> Driver found!</string>
    <string name="msg_dr_nofind"> No driver found! Retry</string>

    <string name="toast_ordc">Order canceled</string>



    <string name="hello_world">Hello world!</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="title_activity_histo">HistoActivity</string>

</resources>
