<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/info_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/tv_register"
                android:text="@string/action_sign_in"
                android:textSize="32dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:drawableRight="@drawable/ic_logo"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background"/>

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_firstname"
                android:textColorHint="@color/Aqua"
                android:layout_below="@+id/tv_register"/>


            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_lastname"
                android:textColorHint="@color/Aqua"
                android:layout_below="@id/et_firstname"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:textColorHint="@color/Aqua"
                android:layout_below="@id/et_lastname"/>

            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_number"
                android:textColorHint="@color/Aqua"
                android:layout_below="@id/et_username"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/Aqua"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_below="@+id/et_number"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColorHint="@color/Aqua"
                android:inputType="textPassword"
                android:layout_marginBottom="16dp"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_below="@+id/et_email"/>

            <Button android:id="@+id/bt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textColor="@color/green"
                android:layout_marginLeft="25dp"
                android:layout_below="@+id/et_password"
                android:layout_alignRight="@+id/et_password"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_cancelR"
                android:text="@string/action_cancel"
                android:textColor="@color/red"
                android:layout_toLeftOf="@id/bt_register"
                android:layout_alignTop="@+id/bt_register"/>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>


