<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">


        <LinearLayout
            android:id="@+id/info_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/tv_signin"
                android:text="@string/action_login"
                android:textSize="32dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:drawableRight="@drawable/ic_logo"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/Aqua"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textColorHint="@color/Aqua"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button android:id="@+id/bt_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="18dp"
                android:text="@string/action_login"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bt_go_register"
                android:text="@string/tv_register"
                android:textColor="@color/DarkGoldenrod"
                android:background="@drawable/transparent"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="22dp" />

        </LinearLayout>

</LinearLayout>


